--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Example HTML page</title>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./CSS/main.css">
 </head>
 
 <body>
